--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,15 @@
 services:
-  app:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    ports:
-      - '80:80'
-      - '443:443'
-    networks:
-      - default
-    depends_on:
-      - postgres
+#  app:
+#    build:
+#      context: .
+#      dockerfile: Dockerfile
+#    ports:
+#      - '80:80'
+#      - '443:443'
+#    networks:
+#      - default
+#    depends_on:
+#      - postgres
   postgres:
     image: 'postgres:latest'
     environment:
