--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,17 @@
             <version>3.1.8</version>
         </dependency>
 
+        <!--Mail-->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context-support</artifactId>
+            <version>6.1.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+            <version>3.2.1</version>
+        </dependency>
 
         <dependency>
             <groupId>nz.net.ultraq.thymeleaf</groupId>
